--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -32,5 +32,12 @@ clean-targets:         # directories to be removed by `dbt clean`
 models:
   dbt_demo_project:
     # Config indicated by + and applies to all files under models/example/
-    example:
+    staging:
       +materialized: view
+    marts:
+      +materialized: table
+
+seeds:
+  +database: MY_DBT_DB
+  +schema: DBT_SCHEMA
+  +quote_columns: false
