--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,6 +10,7 @@ phases:
 
   pre_build:
     commands:
+      - echo "DBT_ACCOUNT=$DBT_ACCOUNT
       - mkdir -p ~/.dbt
       - |
         cat > ~/.dbt/profiles.yml <<YAML
